@@ -4,9 +4,15 @@ import guess.dao.EventTypeDao;
 import guess.domain.Conference;
 import guess.domain.source.Event;
 import guess.domain.source.EventType;
+import guess.domain.source.Organizer;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mockito;
 import org.mockito.internal.verification.VerificationModeFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,8 +24,10 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.params.provider.Arguments.arguments;
 
 @DisplayName("EventTypeServiceImpl class tests")
 @ExtendWith(SpringExtension.class)
@@ -59,27 +67,53 @@ class EventTypeServiceImplTest {
         Mockito.reset(eventTypeDao);
     }
 
-    @Test
-    void getEventTypesWithParameters() {
-        EventType eventType0 = new EventType();
-        eventType0.setId(0);
-        eventType0.setConference(Conference.JPOINT);
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @DisplayName("getEventTypes method with parameters tests")
+    class GetEventTypesTest {
+        private Stream<Arguments> data() {
+            Organizer organizer0 = new Organizer();
+            organizer0.setId(0);
 
-        EventType eventType1 = new EventType();
-        eventType1.setId(1);
+            EventType eventType0 = new EventType();
+            eventType0.setId(0);
+            eventType0.setConference(Conference.JPOINT);
+            eventType0.setOrganizer(organizer0);
 
-        Mockito.when(eventTypeDao.getEventTypes()).thenReturn(List.of(eventType0, eventType1));
+            EventType eventType1 = new EventType();
+            eventType1.setId(1);
+            eventType1.setOrganizer(organizer0);
 
-        eventTypeService.getEventTypes(true, false, null);
-        Mockito.verify(eventTypeDao, VerificationModeFactory.times(1)).getEventTypes();
-        Mockito.verifyNoMoreInteractions(eventTypeDao);
+            List<EventType> eventTypes = List.of(eventType0, eventType1);
 
-        assertEquals(Collections.emptyList(), eventTypeService.getEventTypes(false, false, null));
-        assertEquals(List.of(eventType0), eventTypeService.getEventTypes(true, false, null));
-        assertEquals(List.of(eventType1), eventTypeService.getEventTypes(false, true, null));
-        assertEquals(List.of(eventType0, eventType1), eventTypeService.getEventTypes(true, true, null));
+            return Stream.of(
+                    arguments(false, false, null, eventTypes, Collections.emptyList()),
+                    arguments(true, false, null, eventTypes, List.of(eventType0)),
+                    arguments(false, true, null, eventTypes, List.of(eventType1)),
+                    arguments(true, true, null, eventTypes, List.of(eventType0, eventType1)),
+                    arguments(false, false, 0L, eventTypes, Collections.emptyList()),
+                    arguments(true, false, 0L, eventTypes, List.of(eventType0)),
+                    arguments(false, true, 0L, eventTypes, List.of(eventType1)),
+                    arguments(true, true, 0L, eventTypes, List.of(eventType0, eventType1)),
+                    arguments(false, false, 1L, eventTypes, Collections.emptyList()),
+                    arguments(true, false, 1L, eventTypes, Collections.emptyList()),
+                    arguments(false, true, 1L, eventTypes, Collections.emptyList()),
+                    arguments(true, true, 1L, eventTypes, Collections.emptyList())
+            );
+        }
 
-        Mockito.reset(eventTypeDao);
+        @ParameterizedTest
+        @MethodSource("data")
+        void getEventTypes(boolean isConferences, boolean isMeetups, Long organizerId, List<EventType> eventTypes,
+                           List<EventType> expected) {
+            Mockito.when(eventTypeDao.getEventTypes()).thenReturn(eventTypes);
+
+            assertEquals(expected, eventTypeService.getEventTypes(isConferences, isMeetups, organizerId));
+            Mockito.verify(eventTypeDao, VerificationModeFactory.times(1)).getEventTypes();
+            Mockito.verifyNoMoreInteractions(eventTypeDao);
+
+            Mockito.reset(eventTypeDao);
+        }
     }
 
     @Test
